--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.project
+.settings/org.eclipse.core.resources.prefs
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.m2e.core.prefs
+*.class
+target/classes/META-INF/MANIFEST.MF
+target/classes/META-INF/maven/com.demo/junit-maven-example/pom.properties
+target/classes/META-INF/maven/com.demo/junit-maven-example/pom.xml
+.classpath
