--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,23 @@
   
    <build>
     <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <excludes>
+            <exclude>**/Integration*.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.19.1</version>
         <configuration>
           <includes>
-            <include>**/CalculatorTest*.java</include>
+            <include>**/Integration*.java</include>
           </includes>
         </configuration>
         <executions>
