--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
           <includes>
             <include>**/Unit*.java</include>
           </includes>
-          <argLine>-agentpath:"${dt_agent_path}"=name=${dt_agent_name},server=${dt_server},optionTestRunIdJava=${dtTestrunID}</argLine>
+          <!-- <argLine>-agentpath:"${dt_agent_path}"=name=${dt_agent_name},server=${dt_server},optionTestRunIdJava=${dtTestrunID}</argLine>  -->
         </configuration>
       </plugin>
       <plugin>
