--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,10 @@
           <includes>
             <include>**/Integration*.java</include>
           </includes>
+           
+          <skipTests>true</skipTests>
         </configuration>
+        
         <executions>
           <execution>
             <goals>
