--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   
    <build>
     <plugins>
-    <!--<plugin>
+    <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19.1</version>
@@ -44,7 +44,7 @@
             <include>**/Integration*.java</include>
           </includes>
            
-          <!--<skipTests>true</skipTests>-->
+          <skipTests>true</skipTests>
         </configuration>
         
         <executions>
